# DiffCrysGen

./: DiffCrysGen-demo.ipynb  README.md  setup.cfg
assets/: ircr_diffusion_scaler.pkl
diffcrysgen/: analyze_generated_structures.py  model.py  sampler.py  utils.py
notebooks/: DiffCrysGen-demo.ipynb
scripts/: sample.py  train.py
