[metadata]
name = diffcrysgen
version = 0.1.0  ; Starting version number
description = "DiffCrysGen is a score-based diffusion model for accelerated design of diverse inorganic crystalline materials."
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/SouravMal/DiffCrysGen"
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent (checked in MacOS and Linux)
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

install_requires =
    # Core DL/Data Science (Uses compatible release operator ~=)
    torch~=2.5.1
    numpy~=2.0.1
    pandas~=2.2.3
    scikit-learn~=1.6.1 
    tqdm
    
    # Scientific Computing/Materials
    ase~=3.24.0
    spglib~=2.5.0
    joblib

[options.packages.find]
where = .
